# packman_desktop

./: .gitattributes  CMakeLists.txt
resources/: packages.qrc
src/: ApplicationCore.cpp  MainWindow.cpp  MainWindow.h  PackageInfo.h  PackageManager.cpp  PackageManager.h
